--- a/app/main/main.module.sass
+++ b/app/main/main.module.sass
@@ -1,16 +1,20 @@
-.page
-	display: flex
-	align-items: center
-	justify-content: center
-	height: 100vh
-	width: 100vw
-
 .main
 	display: flex
-	align-items: center
-	justify-items: center
-	flex-direction: column
-	.area
-		width: 300px
-		height: 2rem
-		background: #000
+	align-items: flex-end
+	justify-content: flex-end
+	height: 80vh
+	width: 100vw
+	padding: 2rem
+	gap: 1rem
+	button
+		display: flex
+		align-items: center
+		justify-content: center
+		width: 8rem
+		height: 4rem
+		border-radius: 1rem
+		background: #ffffff62
+		cursor: pointer
+		&:hover
+			background:#b3b3b3577
+			
